--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1"
+  },
+  "engines": {
+    "node": "16.20.1"
   }
 }
