--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.1"
+    "mongoose": "^8.0.1",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.0",
+    "web-push": "^3.6.7"
   }
 }
